--- a/index.html
+++ b/index.html
@@ -1541,9 +1541,14 @@ Alternatively you can download <a href="http://getfirefox.com">Mozilla Firefox</
 
         <!-- Taika script -->
 
-        <script  src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-        <script src="taika_chat_onefile_eng.js"></script>
+        <!-- <script  src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script> -->
+
+        <!-- <script src="taika_chat_onefile_eng.js"></script> -->
         <!-- <script src="taika_chat_onefile_finn.js"></script> -->
+        <script src="https://connect.taikacompany.com/static/res/jquery-1.12.4.min.js" crossorigin="anonymous"></script>
+<script src="https://connect.taikacompany.com/api/chat/6298589a63e3e534e025a6b1"></script>
+
+
 
 
 
